[gd_scene load_steps=2 format=3 uid="uid://ctef5p8q83n01"]

[ext_resource type="Script" uid="uid://c3c0pex5p82le" path="res://objects/window_n_blind/window_n_blind.gd" id="1_ounrq"]

[node name="WindowNBlind" type="Node2D"]
script = ExtResource("1_ounrq")

[node name="BlindButton" type="Button" parent="."]
offset_right = 128.0
offset_bottom = 64.0
text = "Close Blind"

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="BlindButton" to="." method="_on_blind_press"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_end"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_end"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_end"]
